// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`using babel-jest for js files should pass using template "default" 1`] = `
  √ jest
  ↳ exit code: 0
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  PASS  without-outDir/bar.spec.ts
  PASS  with-outDir/bar.spec.ts
  PASS  with-outDir/foo.spec.js
  PASS  without-outDir/foo.spec.js
  
  Test Suites: 4 passed, 4 total
  Tests:       8 passed, 8 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`using babel-jest for js files should pass using template "with-babel-7" 1`] = `
  √ jest
  ↳ exit code: 0
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  PASS  without-outDir/bar.spec.ts
  PASS  with-outDir/bar.spec.ts
  PASS  with-outDir/foo.spec.js
  PASS  without-outDir/foo.spec.js
  
  Test Suites: 4 passed, 4 total
  Tests:       8 passed, 8 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`using babel-jest for js files should pass using template "with-babel-7-string-config" 1`] = `
  √ jest
  ↳ exit code: 0
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  PASS  without-outDir/bar.spec.ts
  PASS  with-outDir/bar.spec.ts
  PASS  without-outDir/foo.spec.js
  PASS  with-outDir/foo.spec.js
  
  Test Suites: 4 passed, 4 total
  Tests:       8 passed, 8 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`using babel-jest for js files should pass using template "with-typescript-2-7" 1`] = `
  √ jest
  ↳ exit code: 0
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  PASS  without-outDir/bar.spec.ts
  PASS  with-outDir/bar.spec.ts
  PASS  without-outDir/foo.spec.js
  PASS  with-outDir/foo.spec.js
  
  Test Suites: 4 passed, 4 total
  Tests:       8 passed, 8 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`using ts-jest for js files should pass using template "default" 1`] = `
  √ jest
  ↳ exit code: 0
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  PASS ./esm.spec.js
    √ esm
  
  Test Suites: 1 passed, 1 total
  Tests:       1 passed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`using ts-jest for js files should pass using template "with-babel-7" 1`] = `
  √ jest
  ↳ exit code: 0
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  PASS ./esm.spec.js
    √ esm
  
  Test Suites: 1 passed, 1 total
  Tests:       1 passed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`using ts-jest for js files should pass using template "with-babel-7-string-config" 1`] = `
  √ jest
  ↳ exit code: 0
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  PASS ./esm.spec.js
    √ esm
  
  Test Suites: 1 passed, 1 total
  Tests:       1 passed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`using ts-jest for js files should pass using template "with-typescript-2-7" 1`] = `
  √ jest
  ↳ exit code: 0
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  PASS ./esm.spec.js
    √ esm
  
  Test Suites: 1 passed, 1 total
  Tests:       1 passed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;
